--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">Undivided</string>
     <string name="title_activity_navigation">Map</string>
+    <string name="speech_toogle_on">START SPEAKING</string>
+    <string name="speech_toogle_off">STOP SPEAKING</string>
+    <string name="speech_prompt">Do you want to reply?</string>
+    <string name="speech_not_supported">Sorry didnt get that</string>
+    <string name="start_speaking">Okay!I will read your message now</string>
+    <string name="stop_speaking">Done!</string>
+    <string name="sms_label" />
+    <string name="none" />
+    <string name="speech_toggle_on" />
+    <string name="speech_toggle_off" />
 </resources>
