Settings first commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="none" />
     <string name="speech_toggle_on" />
     <string name="speech_toggle_off" />
+    <string name="menu_string_settings">Settings</string>
 </resources>
