--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,12 +85,12 @@
     <!-- Shared Preferences -->
     <string name="shared_preferences_key">COM.MHMT.AUTOTEXTMATE</string>
     <string name="settings_mute_position_key">com.mhmt.autotextmate.mutedelayposition</string>
-    <string name="status_code_sent" >Code Sent</string>
-    <string name="status_verification_failed" >Verification failed</string>
-    <string name="status_verification_succeeded" >Verification succeeded</string>
-    <string name="instant_validation" >(instant validation)</string>
-    <string name="status_sign_in_failed" >Sign-in failed</string>
-    <string name="signed_out" >Signed Out </string>
+    <string name="status_code_sent">Code Sent</string>
+    <string name="status_verification_failed">Verification failed</string>
+    <string name="status_verification_succeeded">Verification succeeded</string>
+    <string name="instant_validation">(instant validation)</string>
+    <string name="status_sign_in_failed">Sign-in failed</string>
+    <string name="signed_out">Signed Out </string>
 
     <string name="label_google_sign_in">Firebase + Google Sign In</string>
     <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
@@ -139,10 +139,6 @@
     <string name="hint_verification_code">Verification Code</string>
 
 
-
-
-
-
     <string name="firebase_status_fmt">Firebase User: %s</string>
     <string name="firebase_user_management">Firebase User Management</string>
 
@@ -165,4 +161,22 @@
 
     <string name="id_fmt">User ID: %s</string>
     <string name="email_fmt">Email: %s</string>
+    <string name="next">NEXT</string>
+    <string name="skip">SKIP</string>
+    <string name="start">GOT IT</string>
+
+    <string name="slide_1_title">Undivided</string>
+    <string name="slide_1_desc">Keeping your eyes on the road and not on your phone</string>
+
+    <string name="slide_2_title">Choose</string>
+    <string name="slide_2_desc">Choose from 3 different modes for your driving experience</string>
+
+    <string name="slide_3_title">Set-Up</string>
+    <string name="slide_3_desc">Set-up your settings for your convenience </string>
+
+    <string name="slide_4_title">Ambot</string>
+    <string name="slide_4_desc">Hehe</string>
+
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
 </resources>
