partial ui for intro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,7 +169,7 @@
     <string name="slide_1_desc">Keeping your eyes on the road and not on your phone</string>
 
     <string name="slide_2_title">Choose</string>
-    <string name="slide_2_desc">Choose from 3 different modes for your driving experience</string>
+    <string name="slide_2_desc">Choose contacts who can message or call you even you are driving</string>
 
     <string name="slide_3_title">Set-Up</string>
     <string name="slide_3_desc">Set-up your settings for your convenience </string>
