--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,8 +165,8 @@
     <string name="skip">SKIP</string>
     <string name="start">GOT IT</string>
 
-    <string name="slide_1_title">Undivided</string>
-    <string name="slide_1_desc">Keeping your eyes on the road and not on your phone</string>
+    <string name="slide_1_title">Are you a driver?</string>
+    <string name="slide_1_desc">Keep your ambot unya na and let undivided always stay under control. </string>
 
     <string name="slide_2_title">Choose</string>
     <string name="slide_2_desc">Choose contacts who can message or call you even you are driving</string>
