--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,4 +190,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_group">Add Group</string>
+
+    <string name="access_token">pk.eyJ1IjoiZGpkeXN0ZSIsImEiOiJjajhuOGt0ZGsxNnJsMndzN2FqNXZ2cWR6In0.9mCwvUJDx78LkgaWCUmQdw</string>
+    <string name="directions_activity_toast_message">Route is %1$f meters long.</string>
 </resources>
