partial addition of send sms to created contact group (lacking)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,4 +190,34 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_group">Add Group</string>
+
+
+    <string name="app_label">SMS Group</string>
+    <string name="dialog_ok">OK</string>
+    <string name="about">about</string>
+    <string name="menu_title_save">save</string>
+    <string name="menu_title_delete">delete</string>
+    <string name="no_group">no group created yet</string>
+    <string name="no_message">no message created yet</string>
+    <string name="no_topic">no topic created yet</string>
+    <string name="menu_title_send">send message</string>
+    <string name="outbox_empty">outbox is currently empty</string>
+    <string name="send_cancel">cancel</string>
+    <string name="menu_title_replay">replay</string>
+    <string name="title_group">Group list</string>
+    <string name="title_create_group">Create group</string>
+    <string name="title_edit_group">Edit group</string>
+    <string name="title_message">Message list</string>
+    <string name="title_edit_message">Edit message</string>
+    <string name="title_create_message">Create message</string>
+    <string name="title_outbox">Outbox</string>
+    <string name="title_topic">Message topic list</string>
+    <string name="title_topic_send">Send grouped messages</string>
+    <string name="menu_title_add_group">add group</string>
+    <string name="menu_title_add">add message</string>
+    <string name="share_menu_title">share message list</string>
+    <string name="app_title">Group</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
 </resources>
